--- a/drinkfood/public/css/templatemo_style.css
+++ b/drinkfood/public/css/templatemo_style.css
@@ -13,7 +13,9 @@ body {
 	font-family: Verdana, Arial, san-serif;
 	font-size: 11px;
 	color: #ffffff;
-	background: #4b4743;
+	background-image: url(../images/bgr_body.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 a:link, a:visited { color: #e6e154; text-decoration: none; font-weight: bold;} 
@@ -115,7 +117,7 @@ img {
 	font-weight: bold;
 	text-align: center;
 	text-decoration: none;
-	color: #969547;
+	color: #fff;
 }
 
 #templatemo_menu li a:hover, #templatemo_menu li .current{
@@ -254,10 +256,6 @@ img {
 	color: #fcf88e;
 }
 
-
-
-
-
 #templatemo_content_right .templatemo_product_box {
 	float: left;
 	width: 303px;
@@ -313,6 +311,42 @@ img {
 	font-weight: normal;
 }
 
+.box_content {
+    width: 100%;
+    box-sizing: border-box;
+}
+.product_box {
+    width: 100%;
+    box-sizing: border-box;
+}
+.content_bar{
+	padding: 10px;
+    margin: 0 0 20px 0;
+    font-size: 15px;
+    color: #cbc750;
+    display: table;
+    width: 100%;
+	box-sizing: border-box;
+    background: url(../images/templatemo_h1_bg.jpg);
+}
+
+.title_content{
+	width: 30%;
+    float: left;
+    box-sizing: border-box;
+}
+
+.title_bar{
+	font-weight:bold;
+}
+
+.filter_form{
+	width:70%;
+	float: left;
+	box-sizing: border-box;
+	text-align: right;
+}
+
 .box_img {
     width: 100px;
     display: table;
@@ -340,6 +374,27 @@ img {
 	color: yellow;
 }
 
+.pagination_bar {
+    width: 100%;
+    box-sizing: border-box;
+    height: 30px;
+    position: relative;
+}
+
+.pagination {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.pagination li {
+    margin-left: 10px;
+    border: 1px solid;
+    padding: 0px 10px !important;
+    background: black;
+}
 /* end of content */
 
 /* footer */
