--- a/drinkfood/public/css/templatemo_style.css
+++ b/drinkfood/public/css/templatemo_style.css
@@ -124,6 +124,25 @@ img {
 	color: #fcf88e;
 }
 
+.language{
+	width: 50px;
+	float: right;
+	font-size: 18px;
+}
+#lang_dropdown{
+	z-index: 1;
+    position: absolute;
+    background-color: #fff;
+    font-size: 13px !important;
+    padding: 5px;
+    box-sizing: border-box;
+    list-style: none;
+	border-radius: 5px;
+}
+#lang_dropdown li {
+    margin-bottom: 10px;
+}
+
 /* end of menu*/
 
 /* header */
