--- a/drinkfood/public/css/templatemo_style.css
+++ b/drinkfood/public/css/templatemo_style.css
@@ -11,7 +11,7 @@ body {
 	padding: 0;
 	line-height: 1.5em;
 	font-family: Verdana, Arial, san-serif;
-	font-size: 11px;
+	font-size: 14px;
 	color: #ffffff;
 	background-image: url(../images/bgr_body.jpg);
     background-size: cover;
@@ -24,6 +24,12 @@ a:active, a:hover { color: #e6e154; text-decoration: underline;}
 p {
 	margin: 0px;
 	padding: 0px;
+}
+
+.error{
+	color: red;
+	font-style: italic;
+	display: inline-block;
 }
 
 img {
@@ -479,6 +485,7 @@ img {
 	#templatemo_content #templatemo_content_left {
 		width: 25%;
 		padding: 10px 0px;
+		box-sizing: border-box;
 	}
 
 	#templatemo_content #templatemo_content_right {
@@ -567,6 +574,7 @@ img {
 	#templatemo_content #templatemo_content_left {
 		width: 100%;
 		padding: 10px 0px;
+		box-sizing: border-box;
 	}
 
 	#templatemo_content #templatemo_content_right {
@@ -655,6 +663,7 @@ img {
 	#templatemo_content #templatemo_content_left {
 		width: 100%;
 		padding: 10px 0px;
+		box-sizing: border-box;
 	}
 
 	#templatemo_content #templatemo_content_right {
