design product detail page

--- a/drinkfood/public/css/templatemo_style.css
+++ b/drinkfood/public/css/templatemo_style.css
@@ -388,6 +388,10 @@ img {
 	margin-bottom: 15px;
 }
 
+.no_rating:hover{
+	color: yellow !important;
+}
+
 .rating{
 	margin-bottom: 5px;
 	color: yellow;
@@ -662,8 +666,21 @@ img {
 		height: auto;
 		padding: 10px 0px;
 	}
+	
+	.info_product{
+		width:100%;
+		padding: 0 0 0 0px !important;
+	}
 
 	.box_img {
+		width: 100%;
+	}
+	
+	.image_panel{
+		width: 100% !important;
+	}
+
+	.image_panel img{
 		width: 100%;
 	}
 
