--- a/drinkfood/public/css/regist.css
+++ b/drinkfood/public/css/regist.css
@@ -65,6 +65,7 @@
     .form_input {
         width: 100%;
         height: 30px;
+        box-sizing: border-box;
     }
     .btn_regist{
         width: 100%;
