edit manage order page

--- a/drinkfood/public/css/master.css
+++ b/drinkfood/public/css/master.css
@@ -4,6 +4,11 @@
 .ratings{
   color: yellow !important;
 }
+.price{
+  font-weight: bold;
+  font-size: 20px;
+  color: darkorange;
+}
 .dialog_loading
 {
     width: 100%;
