--- a/drinkfood/public/css/master.css
+++ b/drinkfood/public/css/master.css
@@ -40,3 +40,17 @@
       100% {background-size:100% 100%}
   }
   
+#cat_detail{
+  z-index: 2;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+
+#dialog_content{
+  height: 300px;
+  overflow: auto;
+} 
